@@ -102,9 +102,11 @@ Sets GEOIP_COUNTRY_CODE, GEOIP_REGION_NAME and GEOIP_REGION
 
 GeoIP City Edition:
 Sets GEOIP_CONTINENT_CODE, GEOIP_COUNTRY_CODE, GEOIP_REGION, 
-	GEOIP_REGION_NAME, GEOIP_CITY, GEOIP_DMA_CODE,
+	GEOIP_REGION_NAME, GEOIP_CITY, GEOIP_METRO_CODE,
         GEOIP_AREA_CODE, GEOIP_LATITUDE, GEOIP_LONGITUDE
 	and GEOIP_POSTAL_CODE
+
+GEOIP_DMA_CODE is depreciated but working. Use GEOIP_METRO_CODE instead.
 
 GeoIP ISP Edition:
 Sets GEOIP_ISP
